# phD_thesis

./: README.md
project 4/UPGRADE/: README.md  pyproject.toml  setup.py
project 4/UPGRADE/Example0_BV/: PhenylHexone_test.py  calc_oper_para.py  db_doc.py  devices.toml  main_anal.py  main_loop.py  training_set
project 4/UPGRADE/Example0_BV/tools/: Gryffin_test.py  anal_parse_old_exp.py  db_manually.py  old_data_parse.py  platform_test.py  plot_dad_live.py  plot_exp.py
project 4/UPGRADE/Example0_BV/tools/unused/: 3d_dad.py  mongoDB.py  old_run_experiment.py  plot_pressure.py  serial_sniffer.py
project 4/UPGRADE/Example3_debenzylation/: README.md  calculator_operating.py  db_doc.py  devices.toml  executor.py  main_anal.py  main_executor.py  main_planner.py
project 4/UPGRADE/Example3_debenzylation/tools/: platform_test.py
project 4/UPGRADE/docs/Calculator/: GL_flow_module.md
project 4/UPGRADE/src/general_platform/: __init__.py  platform_error.py
project 4/UPGRADE/src/general_platform/Analysis/: __init__.py  anal_Chromatogram.py  anal_file_watcher.py  anal_hplc_chromatogram.py  anal_hplc_result.py  anal_ir_chromatogram.py  anal_old_func.py  anal_old_hplc_result.py
project 4/UPGRADE/src/general_platform/Coordinator/: Maneger_PostAnalysis.py  __init__.py  run_experiment_schedule.py
project 4/UPGRADE/src/general_platform/Executor/: __init__.py  _hw_control.py
project 4/UPGRADE/src/general_platform/Librarian/: __init__.py  db_comm.py  db_models.py  db_server.py
project 4/UPGRADE/tools/: deleteme_sniff.py  plot_3d.py  plot_graph_ info.py
(+41 files in other folders)
