[tool.poetry]
name = "BV_experiments"
version = "0.1.0"
description = "A package for managing and executing debenzylation experiments, including flow rate calculations, database modeling, and hardware control."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pint = "^0.20.1"
loguru = "^0.6.0"
beanie = "^1.15.0"
pydantic = "^1.10.2"
networkx = "^3.0"
asyncio = {version = "^3.4.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true